<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:background="#0e1417"
    tools:context=".presentation.ui.CoinDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_name_coin_details_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_round"
            app:layout_constraintBottom_toTopOf="@id/cl_chart_coin_details_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_coin_name_symbol_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_coin_name_symbol_coin_details_fragment">

                <ImageView
                    android:id="@+id/iv_coin_logo_coin_details_fragment"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background" />

                <TextView
                    android:id="@+id/tv_current_price_coin_details_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/tv_change_percentage_coin_details_fragment"
                    app:layout_constraintStart_toEndOf="@id/iv_coin_logo_coin_details_fragment"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Name" />

                <TextView
                    android:id="@+id/tv_change_percentage_coin_details_fragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/iv_coin_logo_coin_details_fragment"
                    app:layout_constraintTop_toBottomOf="@id/tv_current_price_coin_details_fragment"
                    tools:text="%" />

                <ImageView
                    android:id="@+id/iv_arrow_coin_details_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_change_percentage_coin_details_fragment"
                    app:layout_constraintStart_toEndOf="@id/tv_change_percentage_coin_details_fragment"
                    app:layout_constraintTop_toTopOf="@id/tv_change_percentage_coin_details_fragment"
                    tools:ignore="contentDescription"
                    tools:src="@drawable/ic_arrow_drop_up" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_chart_coin_details_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_name_coin_details_fragment">

            <TextView
                android:id="@+id/tv_chart_title_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/include_7_days_data"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/lc_line_chart_coin_details_fragment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.db.williamchart.view.LineChartView
                android:id="@+id/lc_line_chart_coin_details_fragment"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="20dp"
                android:layout_marginHorizontal="16dp"
                app:chart_axis="none"
                app:chart_gridEffect="dotted"
                app:chart_labelsColor="#13232c"
                app:chart_labelsSize="8sp"
                app:chart_lineColor="#FFF176"
                app:chart_lineThickness="1dp"
                app:chart_smoothLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_chart_title_coin_details_fragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_details_coin_details_fragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/bg_round"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_chart_coin_details_fragment"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:id="@+id/tv_categories_title_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/categories"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_categories_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_categories_title_coin_details_fragment"
                app:layout_constraintStart_toEndOf="@id/tv_categories_title_coin_details_fragment" />

            <TextView
                android:id="@+id/tv_genesis_date_title_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/genesis_date"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_categories_title_coin_details_fragment" />

            <TextView
                android:id="@+id/tv_genesis_date_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/white"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_genesis_date_title_coin_details_fragment"
                app:layout_constraintStart_toEndOf="@id/tv_genesis_date_title_coin_details_fragment" />

            <TextView
                android:id="@+id/tv_link_title_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/website"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_genesis_date_title_coin_details_fragment" />

            <TextView
                android:id="@+id/tv_link_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/hyperlink"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_link_title_coin_details_fragment"
                app:layout_constraintStart_toEndOf="@id/tv_link_title_coin_details_fragment"
                tools:text="https://stackoverflow.com" />

            <TextView
                android:id="@+id/tv_description_title_coin_details_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/description"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_link_title_coin_details_fragment" />

            <TextView
                android:id="@+id/tv_description_coin_details_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingBottom="8dp"
                android:scrollbars="vertical"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_description_title_coin_details_fragment" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/pb_loading_coin_details_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>